--- a/.github/workflows/openwrt-builder.yml
+++ b/.github/workflows/openwrt-builder.yml
@@ -15,7 +15,10 @@ name: OpenWrt Builder
 on:
   repository_dispatch:
   workflow_dispatch:
-
+  schedule:
+    - cron: 0 6 1/3 * *
+  watch:
+    types: started
 env:
   REPO_URL: https://github.com/coolsnowwolf/lede
   REPO_BRANCH: master
